MEDIA_LOG FFmpegAudioDecoder::ConfigureDecoder() channel mismatch

Bug 705038 encountered a case where such channel mismatch occurred, but
logs were insufficient in a release build. This change makes a previous
DLOG instead do a MEDIA_LOG(ERROR) for this specific case.

BUG=714730,705038

Review-Url: https://codereview.chromium.org/2835043004
Cr-Commit-Position: refs/heads/master@{#466785}

Former-commit-id: 854dede8e4cb7885e803e9e7f3223f00e89a6d38